--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             <input type="text" id="idNome" class="input-padrao" name="idNome" required>
             <label for="convertido">Convertido</label>
             <h4 class ="input-padrao"></h4>
+            <label for="Description">Description</label>
+            <p>App responsible for providing credentials for executing the respective APIs</p>
 
             <input type="submit" value="Enviar" id="send" class="enviar">
 
