Adicionando placeholder no idNome

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <form>
             <label for="idNome">ID e Nome da Loja </label>
-            <input type="text" id="idNome" class="input-padrao" name="idNome" required>
+            <input type="text" id="idNome" class="input-padrao" name="idNome" required placeholder="1234 Exemplo">
             <label for="convertido">Convertido</label>
             <h4 class ="input-padrao"></h4>
             <label for="Description">Description</label>
